[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.7
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = lombscargle
description = Fast Lomb-Scargle Periodogram for AstroPy
long_description = This is a fast implementation of the classic lomb-scargle periodogram, compatible with astropy
author = Jake VanderPlas
author_email = jakevdp@uw.edu
license = BSD
url = http://github.com/jakevdp/lombscargle
edit_on_github = False
github_project = jakevdp/lombscargle

[entry_points]
astropy-package-template-example = packagename.example_mod:main
